--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,9 @@
     color: #ffffff;
     font-size: 18px;
 }
+.reactJson-box{
+    padding: 18px;
+    width: 300px;
+    height: 100vh;
+    background: rgb(39, 40, 34);
+}
