--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,7 @@
 
 .error-row .MuiTableCell-root{
     color: #ff0c05 !important;
+    font-weight: bold;
 }
 .null-dialog .MuiDialog-paperWidthSm{
     background: transparent;
