--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,36 @@ html,body{
 .App {
   text-align: center;
 }
+.project-name{
+    color:#fff;
+    font-size: 30px;
+    position: absolute;
+    top:20px;
+    transform: translateX(-50%);
+    left:  50%;
+    white-space: nowrap;
+    vertical-align: middle;
+}
+.project-name img{
+    width: 40px;
+    height: 40px;
+    position: relative;
+    top: 10px;
+    margin-right: 10px;
+}
+.appBar-title{
+    position: absolute;
+    top:17px;
+    transform: translateX(-50%);
+    left:  50%;
+}
+.appBar-title img{
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    position: relative;
+    top: 7px;
+}
 .setting{
     position: absolute;
     right: 20px;
@@ -223,4 +253,20 @@ html,body{
 }
 .drawer-content{
     padding: 30px;
+}
+.drawers-content{
+    display: flex;
+}
+.drawers-left-content{
+    width: 50px;
+    margin-top: 6px;
+}
+.left-check{
+    height:42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.drawers-right-content{
+    flex: 1;
 }
