--- a/src/App.css
+++ b/src/App.css
@@ -244,6 +244,10 @@ html,body{
     background: #29b720;
 }
 
+.draw_select{
+    background: #00e2ff !important;
+}
+
 .cicle{
     width:10px;
     height: 10px;
